tests/baselines/reference/argumentsReferenceInObjectLiteral_Js.errors.txt
error TS5107: Option 'alwaysStrict=false' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
/a.js(16,9): error TS18004: No value exists in scope for the shorthand property 'arguments'. Either declare one or provide an initializer.


!!! error TS5107: Option 'alwaysStrict=false' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== /a.js (1 errors) ====
    const a = () => {
        return {
            arguments: [],
        };
    };
    
    const b = () => {
        const c = {
            arguments: [],
        }
        return c;
    };
    
    const c = () => {
        return {
            arguments,
            ~~~~~~~~~
!!! error TS18004: No value exists in scope for the shorthand property 'arguments'. Either declare one or provide an initializer.
        };
    }
    
    const d = () => {
        const arguments = undefined;
        return {
            arguments,
        };
    }
    